# rustic-chat

./: .gitignore  Cargo.toml  README.md
docs/: RU_DOCS.md
src/: args.rs  main.rs  message.rs  ticket.rs  utils.rs
